--- a/package.json
+++ b/package.json
@@ -3,13 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.8.1",
+    "@stripe/stripe-js": "^1.29.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "react-countup": "^6.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hook-form": "^7.31.2",
+    "react-query": "^3.39.0",
+    "react-rating-stars-component": "^2.2.0",
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^9.0.1",
+    "react-visibility-sensor": "^5.1.1",
+    "sweetalert2": "^11.4.15"
   },
   "scripts": {
     "start": "react-scripts start",
